added the Linkedln and github icons to their buttons

--- a/css/portfolio-tamer-ben.webflow.css
+++ b/css/portfolio-tamer-ben.webflow.css
@@ -426,6 +426,13 @@ p {
   margin-right: 16px;
 }
 
+.button-icon-small.margin-right-small.linkedln-down-today {
+  color: #161616;
+  background-color: #fff;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .button-icon-small.hide-mobile {
   background-color: #fff;
 }
@@ -449,7 +456,7 @@ p {
   border: 2px solid #0a0a0a;
   border-radius: 8px;
   align-items: center;
-  padding: 12px 20px 12px 18px;
+  padding: 12px 15px;
   font-size: 14px;
   font-weight: 700;
   text-decoration: none;
@@ -829,7 +836,7 @@ p {
   }
 
   .button-icon {
-    display: none;
+    display: block;
   }
 
   .button-icon-small {
