--- a/css/portfolio-tamer-ben.webflow.css
+++ b/css/portfolio-tamer-ben.webflow.css
@@ -755,6 +755,50 @@ p {
   padding-bottom: 100px;
 }
 
+.waves-image-logo-1 {
+  opacity: .8;
+  width: 100px;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.waves-wrap-logos-1 {
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  flex-wrap: wrap;
+  flex: 1;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  justify-content: flex-end;
+  align-items: center;
+  max-width: 950px;
+  margin-left: 20px;
+  display: flex;
+}
+
+.waves---paragraph-regular {
+  font-size: 18px;
+  line-height: 130%;
+}
+
+.waves-master-logos-1 {
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+
+.waves---main-container-2 {
+  max-width: 1352px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.waves---section-medium-2 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 @media screen and (min-width: 1440px) {
   .container-3 {
     background-color: #fff;
@@ -833,6 +877,25 @@ p {
 
   .waves-master-logos-2 {
     grid-column-gap: 40px;
+  }
+
+  .waves-image-logo-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .waves-wrap-logos-1 {
+    grid-column-gap: 40px;
+    grid-row-gap: 24px;
+    justify-content: center;
+    width: 100%;
+    max-width: 590px;
+    margin-left: 0;
+  }
+
+  .waves-master-logos-1 {
+    grid-row-gap: 40px;
+    flex-direction: column;
   }
 }
 
@@ -976,6 +1039,16 @@ p {
     padding-top: 80px;
     padding-bottom: 80px;
   }
+
+  .waves---main-container-2 {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .waves---section-medium-2 {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1068,6 +1141,19 @@ p {
     padding-top: 64px;
     padding-bottom: 64px;
   }
+
+  .waves-wrap-logos-1 {
+    grid-row-gap: 32px;
+  }
+
+  .waves---section-medium-2 {
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
+}
+
+#w-node-_37aefc94-4940-7ba7-e159-21010df41a0e-b9adda82, #w-node-_37aefc94-4940-7ba7-e159-21010df41a0f-b9adda82, #w-node-_37aefc94-4940-7ba7-e159-21010df41a10-b9adda82, #w-node-_37aefc94-4940-7ba7-e159-21010df41a11-b9adda82 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
 @media screen and (max-width: 767px) {
