--- a/css/portfolio-tamer-ben.webflow.css
+++ b/css/portfolio-tamer-ben.webflow.css
@@ -84,7 +84,6 @@ p {
 
 .timeline-hero_heading-wrapper {
   text-align: center;
-  max-width: 640px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -812,10 +811,10 @@ p {
   justify-content: center;
   width: 100%;
   max-width: 950px;
-  margin-top: 64px;
+  margin-top: 0;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 60px;
+  padding-bottom: 0;
   display: flex;
 }
 
@@ -841,6 +840,8 @@ p {
 
 .waves---main-container-3 {
   max-width: 1352px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
 }
@@ -882,6 +883,11 @@ p {
   .waves-master-logos-2 {
     grid-column-gap: 20px;
     grid-row-gap: 20px;
+  }
+
+  .waves-image-logo-3 {
+    width: 140px;
+    height: 140px;
   }
 }
 
